crates/auto-lang/test/cookbook/errors/001_boxed_error/boxed_error.at
use.rust std::error::Error

fn main() ! {
    let msg = "hello"
    let result = Ok(msg.to_string())
    let val = result.?
    print(val)
}
